<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:background="@mipmap/ic_nav_bg_drawerlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/nick_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:text="nickName"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/top_view"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="lv 1"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="italic|bold"
        app:layout_constraintBaseline_toBaselineOf="@id/nick_name_tv"
        app:layout_constraintStart_toEndOf="@id/nick_name_tv" />

    <TextView
        android:id="@+id/project_home_page_tv"
        style="@style/drawer_menu"
        android:drawableStart="@mipmap/ic_nav_homepage"
        android:text="@string/drawer_layout_project_home_page"
        app:layout_constraintTop_toBottomOf="@+id/top_view" />

    <TextView
        android:id="@+id/down_load_tv"
        style="@style/drawer_menu"
        android:drawableStart="@mipmap/ic_nav_scan"
        android:text="@string/drawer_layout_down_load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_home_page_tv" />


    <TextView
        android:id="@+id/feed_back_tv"
        style="@style/drawer_menu"
        android:drawableStart="@mipmap/ic_nav_feedback"
        android:text="@string/drawer_layout_feed_back"
        app:layout_constraintTop_toBottomOf="@id/down_load_tv" />


    <TextView
        android:id="@+id/about_tv"
        style="@style/drawer_menu"
        android:drawableStart="@mipmap/ic_nav_about"
        android:text="@string/drawer_layout_about"
        app:layout_constraintTop_toBottomOf="@id/feed_back_tv" />

    <TextView
        android:id="@+id/login_tv"
        style="@style/drawer_menu"
        android:drawableStart="@mipmap/ic_nav_login"
        android:drawablePadding="10dp"
        android:text="@string/drawer_layout_login"
        app:layout_constraintTop_toBottomOf="@id/about_tv" />

    <TextView
        android:id="@+id/collection_tv"
        style="@style/drawer_menu"
        android:drawableStart="@mipmap/ic_nav_collect"
        android:drawablePadding="10dp"
        android:text="@string/drawer_layout_my_collection"
        app:layout_constraintTop_toBottomOf="@id/login_tv" />

    <TextView
        android:id="@+id/exit_tv"
        style="@style/drawer_menu"
        android:drawableStart="@mipmap/ic_nav_exit"
        android:text="@string/drawer_layout_exit"
        app:layout_constraintTop_toBottomOf="@id/collection_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
